# s3-browser

./: README.md  components.d.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  s3_operator.rs
src/components/: Greet.vue
